--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
+  {% include google_analytics.html %}
 
   <body>
-
     {% include header.html %}
 
     <div class="page-content">
@@ -14,7 +13,5 @@
     </div>
 
     {% include footer.html %}
-
   </body>
-
 </html>
