--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   {% include head.html %}
-  {% include google_analytics.html %}
+  {% include google_analytics.html %}  
 
   <body>
     {% include header.html %}
