Update and fix main

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,7 +48,7 @@ $on-laptop:        800px;
 @import
   "base",
   "layout",
-  "syntax-highlighting"
+  "syntax-highlighting",
   "bourbon/bourbon",
   "neat/neat",
   "base/base"
