--- a/_includes/new_header.html
+++ b/_includes/new_header.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="{{site.baseurl}}/">
-        <span><img src="favicon.png" alt="icon" width="42" style="margin-top:-3px;"></span>
+        <span><img src="/favicon.png" alt="icon" width="42" style="margin-top:-3px;"></span>
         {{site.title}}
       </a>
     </div>
