--- a/_layouts/new_layout.html
+++ b/_layouts/new_layout.html
@@ -16,7 +16,7 @@
 
     {% include new_footer.html %}
 
-    <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
   </body>
 </html>
