--- a/_layouts/new_layout.html
+++ b/_layouts/new_layout.html
@@ -9,7 +9,9 @@
     <div class="my-container">
       <div class="container">
         <div class="row">
-          {{ content }}
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10 col-lg-offset-1">
+            {{ content }}
+          </div>
         </div>
       </div>  
     </div>
