--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,29 @@
 ---
-layout: default
+layout: new_layout
 ---
-<div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-md-12">
+        <img src="/img/{{page.image}}" class="img-responsive image-center" height="240">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-10 col-sm-10 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
+        <h3>{{ page.title }}</h3>
+        <h4 class="text-muted">
+          <i class="fa fa-calendar"></i> {{ page.date | date: "%-d/%m/%Y" }}
+          {% if page.author %}
+             - <i class="fa fa-user"></i> 
+             {{ page.author }}
+          {% endif %}
+        </h4>
 
-  <article class="post-content">
-    {{ content }}
-  </article>
-
+        <article class="post-content">
+          {{ content }}
+        </article>
+      </div>
+    </div>
+  </div>
 </div>
