--- a/_sass/_new_layout.scss
+++ b/_sass/_new_layout.scss
@@ -6,11 +6,11 @@ html, body {
   height: 100%;
 }
 
-.navbar .navbar-inverse {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+// .navbar .navbar-inverse {
+//   -webkit-box-sizing: border-box;
+//   -moz-box-sizing: border-box;
+//   box-sizing: border-box;
+// }
 
 .navbar-toggle {
   float: left;
@@ -27,6 +27,15 @@ html, body {
   }
 }
 
+.image-center {
+  margin-left: auto; 
+  margin-right: auto;
+}
+
+.post-content {
+  margin-top: $spacing-unit;
+  margin-bottom: $spacing-unit;
+}
 .footer, .my-container:after {
   height: 48px;
 }
