--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,14 +7,8 @@ layout: new_layout
     <div class="row">
       <div class="col-md-12">
         <article class="post-content">
-        {% if content.length > 0 %}
           {{ content }}
-        {% else %}
-          <h4 class="text-danger">
-            <i class="fa fa-lg fa-exclamation-triangle"></i>
-            {{ site.nocontentalert }}
-          </h4>
-        {% endif %}
+          {{page.categoryname}}
         </article>
       </div>
     </div>
