--- a/_includes/new_footer.html
+++ b/_includes/new_footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
-        <h5>
+        <h5 class="footer-content">
           {{ site.title }}, {{ site.description }} - 
           <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
             Subscribe
