--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,7 +5,7 @@ layout: new_layout
 <div class="panel panel-default">
   <div class="panel-body">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-xs-12 col-sm-12 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
         <article class="post-content">
           {{ content }}
           {{page.categoryname}}
