--- a/_includes/new_footer.html
+++ b/_includes/new_footer.html
@@ -4,9 +4,7 @@
       <div class="col-md-6 col-md-offset-3">
         <h5 class="footer-content">
           {{ site.title }}, {{ site.description }} - 
-          <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
-            Subscribe
-          </a>
+          Made with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>
         </h5>
       </div>
     </div>
