Remove media query only necessary after add content

--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -7,9 +7,9 @@
   padding: 48px 16px;
   z-index: 1;
 
-  @media (min-width: 768px) {
-    padding: 64px 48px 64px 32px;
-  }
+  // @media (min-width: 768px) {
+  //   padding: 64px 48px 64px 32px;
+  // }
 
   &__description,
   &__gradient-circle,
