Change page layout, making shadows smoother and change button color

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -9,5 +9,7 @@ $chocolate: #bfaa9d;
 
 $black-at-16: rgba(0,0,0,0.16);
 $black-at-32: rgba(0,0,0,0.32);
+$blue-grey-16: rgba(38, 50, 56, .16);
+$blue-grey-32: rgba(38, 50, 56, .32);
 
 $white: #FFFFFF;
