--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -1,6 +1,6 @@
 .profile {
   background-color: $white;
-  box-shadow: 0 4px 8px $black-at-16, 0 4px 8px $black-at-32;
+  box-shadow: 0 4px 8px $blue-grey-32;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,7 +26,9 @@
 
   &__description {
     color: $light-blue-grey;
+    font-size: 18px;
     font-weight: 400;
+    line-height: 1.68;
     max-width: 480px;
     text-align: justify;
   }
@@ -44,7 +46,7 @@
 
   &__name {
     font-weight: 700;
-    text-shadow: 0px 2px 4px $black-at-32;
+    text-shadow: 0px 2px 4px $blue-grey-16;
 
     @media (max-width: 480px) {
       font-size: 30px;
@@ -57,8 +59,9 @@
   margin: 16px 0;
 
   &__icon {
-    width: 24px;
     margin-right: 4px;
+    width: 24px;
+    height: 24px;
   }
 
   &__link {
@@ -70,7 +73,7 @@
 }
 
 .resume {
-  background-color: $happy-green;
+  background-image: linear-gradient(180deg, $happy-green 0%, $blue-link 100%);
   border-radius: 2em;
   color:#FFFFFF;
   display: flex;
@@ -82,7 +85,7 @@
   text-decoration: none;
 
   &:hover {
-    filter: brightness(128%);
+    filter: brightness(108%);
   }
 
   &__icon {
