feat(*): Update website to follow Jekyll structure (layouts and includes)

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -11,5 +11,7 @@ $black-at-16: rgba(0,0,0,0.16);
 $black-at-32: rgba(0,0,0,0.32);
 $blue-grey-16: rgba(38, 50, 56, .16);
 $blue-grey-32: rgba(38, 50, 56, .32);
+$light-blue-grey-32: rgba(84, 110, 122, .32);
+$light-blue-grey-64: rgba(84, 110, 122, .64);
 
 $white: #FFFFFF;
