--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -36,7 +36,7 @@
   &__gradient-circle {
     background-image: linear-gradient(180deg, $happy-green 0%, $blue-link 100%);
     border-radius: 50%;
-    box-shadow: 0 4px 8px $black-at-16, 0 4px 8px $black-at-32;
+    box-shadow: 0 4px 8px $light-blue-grey-32, 0 4px 8px $light-blue-grey-64;
     display: flex;
     align-items: center;
     justify-content: center;
