Update website color pallete

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -1,17 +1,19 @@
 // Base website colors
-$blue-link: #009efd;
-$blue-grey: #263238;
-$light-blue-grey: #546E7A;
+
+// Natural pallete
+$blue-link: #009EFD;
+$cloudy-sky: #7493BC;
+$ice-white: #F2FAFF;
+$olive-white: #E6F4F1;
+$grafitti: #3E4756;
 
 $happy-green: #2af598;
-
 $chocolate: #bfaa9d;
 
 $black-at-16: rgba(0,0,0,0.16);
 $black-at-32: rgba(0,0,0,0.32);
 $blue-grey-16: rgba(38, 50, 56, .16);
 $blue-grey-32: rgba(38, 50, 56, .32);
-$light-blue-grey-32: rgba(84, 110, 122, .32);
-$light-blue-grey-64: rgba(84, 110, 122, .64);
-
+$light-blue-grey-32: rgba(62, 71, 86, .32);
+$light-blue-grey-64: rgba(62, 71, 86, .64);
 $white: #FFFFFF;
