--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -7,10 +7,6 @@
   padding: 48px 16px;
   z-index: 1;
 
-  // @media (min-width: 768px) {
-  //   padding: 64px 48px 64px 32px;
-  // }
-
   &__description,
   &__gradient-circle,
   &__name {
@@ -25,8 +21,8 @@
   }
 
   &__description {
-    color: $light-blue-grey;
-    font-size: 18px;
+    color: $cloudy-sky;
+    font-size: 1.8rem;
     font-weight: 400;
     line-height: 1.68;
     max-width: 480px;
@@ -45,11 +41,12 @@
   }
 
   &__name {
+    font-size: 3.8rem;
     font-weight: 700;
-    text-shadow: 0px 2px 4px $blue-grey-16;
+    text-shadow: 0px 2px 2px $blue-grey-16;
 
     @media (max-width: 480px) {
-      font-size: 30px;
+      font-size: 3.6rem;
     }
   }
 }
@@ -66,7 +63,7 @@
 
   &__link {
     color: $blue-link;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 300;
     line-height: 1;
   }
@@ -75,12 +72,14 @@
 .resume {
   background-image: linear-gradient(180deg, $happy-green 0%, $blue-link 100%);
   border-radius: 2em;
-  color:#FFFFFF;
+  color: $white;
   display: flex;
   align-items: center;
+  font-size: 1.6rem;
   font-weight: 700;
+  line-height: 1;
   margin: 16px 0 0;
-  padding: 16px 32px;
+  padding: 18px 48px;
   text-align: center;
   text-decoration: none;
 
