--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,9 +4,13 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 10px;
+}
+
 body {
   background-color: $chocolate;
-  color: $blue-grey;
+  color: $grafitti;
   font-family: 'Exo 2', sans-serif;
   margin: 0;
   padding: 0;
@@ -15,10 +19,6 @@ body {
 .app {
   display: flex;
   flex-direction: column;
-
-  // @media (min-width: 768px) {
-  //   flex-direction: row;
-  // }
 }
 
 .footer {
@@ -29,15 +29,16 @@ body {
   padding: 32px 16px;
 
   &__credits {
-    font-size: 12px;
+    font-size: 1.2rem;
   }
 
   &__passion {
+    font-size: 1.5rem;
     font-weight: 700;
     margin: 16px 0;
   }
 
   a {
-    color: $blue-link;
+    color: $grafitti;
   }
 }
