feat(site): Huge changes!
* Add 'GitHub Projects' section
* Add full page loader into website preload
* Change footer
* Add awesome icons

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,14 @@
     <meta property="og:image" content="{{ site.avatar_url }}" />
     <meta property="og:description" content="{{ meta_description }}" />
     <title>{{ site.title }}</title>
-    <link href="https://fonts.googleapis.com/css?family=Exo+2:300,400,700&display=swap" rel="stylesheet">
+    <!-- Exo 2 Font -->
+    <link href="https://fonts.googleapis.com/css?family=Exo+2:100,300,400,500,700&display=swap" rel="stylesheet">
+    <!-- Dev Icons -->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
