--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -14,11 +14,7 @@
   <p class="profile__description">{{ site.description }}</p>
 
   <span class="email">
-    <img
-      src="/assets/images/mail.svg"
-      class="email__icon"
-      alt="email me icon"
-    />
+    <i class="material-icons email__icon">mail_outline</i>
     <a href="mailto:{{ site.email }}" class="email__link">{{ site.email }}</a>
   </span>
 
@@ -28,7 +24,7 @@
     rel="noopener noreferrer"
     class="resume"
   >
-    <!-- <img src="/assets/images/download.svg" class="resume__icon" alt="download resumé icon" /> -->
+    <i class="material-icons resume__icon">cloud_download</i>
     <span>Download my CV</span>
   </a>
 </div>
