--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,11 @@
 {% include header.html %}
+  {% include full-page-loader.html %}
 
   <div class="app">
     {% include profile.html %}
 
     <div class="content">
+      {% include repositories.html %}
     </div>
   </div>
 
