--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -4,11 +4,9 @@
 $blue-link: #009EFD;
 $cloudy-sky: #7493BC;
 $ice-white: #F2FAFF;
-$olive-white: #E6F4F1;
 $grafitti: #3E4756;
 
 $happy-green: #2af598;
-$chocolate: #bfaa9d;
 
 $black-at-16: rgba(0,0,0,0.16);
 $black-at-32: rgba(0,0,0,0.32);
@@ -17,3 +15,4 @@ $blue-grey-32: rgba(38, 50, 56, .32);
 $light-blue-grey-32: rgba(62, 71, 86, .32);
 $light-blue-grey-64: rgba(62, 71, 86, .64);
 $white: #FFFFFF;
+$cards-base: #F6F6F8;
