--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -6,3 +6,6 @@
 @import "profile";
 @import "content";
 @import "social-media";
+@import "repositories";
+@import "loader";
+@import "fullpage-loader";
