--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -1,4 +1,19 @@
 .content {
-  padding: 64px 32px;
+  padding: 48px 16px;
   width: 100%;
+
+  @media (min-width: 768px) {
+    padding: 48px;
+  }
+
+  &__title {
+    font-size: 2.6rem;
+    line-height: 1;
+    margin: 0 0 24px;
+  }
+
+  &__icon {
+    font-size: 2.2rem;
+    margin-right: 4px;
+  }
 }
