--- a/_sass/_repositories.scss
+++ b/_sass/_repositories.scss
@@ -1,13 +1,14 @@
 .repositories {
   display: flex;
-  justify-content: center;
+
+  justify-content: flex-start;
   flex-wrap: wrap;
   list-style-type: none;
   margin: 0;
   padding: 0;
 
-  @media (min-width: 481px) {
-    justify-content: flex-start;
+  @media (max-width: 480px) {
+    justify-content: center;
   }
 
   &.loading {
@@ -19,20 +20,13 @@
   display: flex;
   align-items: center;
   background-color: $white;
-  border-radius: 8px;
+  border-radius: 4px;
   box-shadow: 0 3px 6px $black-at-16;
   color: $cloudy-sky;
   font-size: 1.6rem;
   margin: 0 0 16px;
   padding: 16px;
   width: 100%;
-
-  @media (min-width: 481px) {
-    height: 94px;
-    margin-right: 32px;
-    min-width: 300px;
-    width: auto;
-  }
 
   &:last-child {
     margin-bottom: 0;
@@ -62,6 +56,10 @@
       font-size: 1.6rem;
       margin-right: 4px;
       margin-left: 24px;
+
+      &:first-child {
+        margin-left: 0;
+      }
     }
   }
 
