Update website layout, to follow column layout

--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -4,6 +4,7 @@
       src="{{ site.avatar_url }}"
       alt="{{ site.name }} profile image"
       class="profile__avatar"
+      loading="lazy"
     />
   </div>
 
