--- a/_includes/social-media.html
+++ b/_includes/social-media.html
@@ -9,6 +9,7 @@
       src="/assets/images/github.svg"
       class="social-media__icon"
       alt="github icon"
+      loading="lazy"
     />
   </a>
 
@@ -22,6 +23,7 @@
       src="/assets/images/instagram.svg"
       class="social-media__icon"
       alt="instagram icon"
+      loading="lazy"
     />
   </a>
 
@@ -35,6 +37,7 @@
       src="/assets/images/linkedin.svg"
       class="social-media__icon"
       alt="linkedin icon"
+      loading="lazy"
     />
   </a>
 
@@ -48,6 +51,7 @@
       src="/assets/images/twitter.svg"
       class="social-media__icon"
       alt="twitter icon"
+      loading="lazy"
     />
   </a>
 </div>
