--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -1,10 +1,8 @@
 .content {
+  margin: 0 auto;
+  max-width: 960px;
   padding: 48px 16px;
   width: 100%;
-
-  @media (min-width: 768px) {
-    padding: 48px;
-  }
 
   &__title {
     font-size: 2.6rem;
