--- a/_sass/_social-media.scss
+++ b/_sass/_social-media.scss
@@ -5,6 +5,10 @@
 
   &__icon {
     width: 48px;
+
+    @media (max-width: 340px) {
+      width: 36px;
+    }
   }
 
   &__link {
@@ -18,6 +22,10 @@
 
     &:last-child {
       margin-right: 0;
+    }
+
+    @media (max-width: 340px) {
+      margin-right: 16px;
     }
   }
 }
