--- a/_sass/_profile.scss
+++ b/_sass/_profile.scss
@@ -4,12 +4,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-height: 100vh;
   padding: 48px 16px;
   z-index: 1;
-
-  @media (min-width: 768px) {
-    min-width: 360px;
-  }
 
   &__description,
   &__gradient-circle,
@@ -45,7 +42,7 @@
   }
 
   &__name {
-    font-size: 3.8rem;
+    font-size: 3.4rem;
     font-weight: 700;
     text-shadow: 0px 2px 2px $blue-grey-16;
 
